# necromancer

./: 1.json  2.json  CMakeLists.txt  config.json
action/: CMakeLists.txt  action.cpp  action.hpp
action_types/: CMakeLists.txt
action_types/attack_action/: attack_action.cpp  attack_action.hpp
action_types/bolt_attack_action/: CMakeLists.txt  bolt_attack_action.hpp
action_types/change_state_action/: change_state_action.hpp
action_types/close_door_action/: CMakeLists.txt  close_door_action.cpp  close_door_action.hpp
action_types/desiccation_action/: desiccation_action.hpp
action_types/entity_action/: CMakeLists.txt  entity_action.cpp  entity_action.hpp
action_types/heal_action/: CMakeLists.txt  heal_action.cpp
action_types/lava_burn_action/: CMakeLists.txt  lava_burn_action.hpp
action_types/line_action/: CMakeLists.txt  line_action.cpp  line_action.hpp
action_types/mana_action/: mana_action.cpp  mana_action.hpp
action_types/mana_gain_action/: CMakeLists.txt  mana_gain_action.cpp
action_types/necromancy_action/: CMakeLists.txt
action_types/next_floor_action/: CMakeLists.txt  next_floor_action.cpp  next_floor_action.hpp
action_types/null_action/: CMakeLists.txt  null_action.hpp
action_types/open_door_action/: open_door_action.cpp  open_door_action.hpp
action_types/polymorph_action/: CMakeLists.txt  polymorph_action.cpp  polymorph_action.hpp
action_types/rest_action/: rest_action.cpp  rest_action.hpp
action_types/spawn_action/: CMakeLists.txt  spawn_action.cpp  spawn_action.hpp
action_types/walk_action/: CMakeLists.txt  walk_action.cpp  walk_action.hpp
api/mob_plugin/: CMakeLists.txt  mob_plugin.hpp
attack/: CMakeLists.txt  attack.cpp  attack.hpp
corpse/: CMakeLists.txt  corpse.cpp  corpse.hpp
cost_priority_queue/: CMakeLists.txt  cost_priority_queue.hpp
direction/: CMakeLists.txt  direction.hpp
dynamic_library/: CMakeLists.txt  dynamic_library.hpp
energy/: energy.cpp  energy.hpp
entity/: CMakeLists.txt  entity.cpp  entity.hpp
essence/: essence.cpp  essence.hpp
event/: CMakeLists.txt  event.hpp
faction/: CMakeLists.txt  faction.cpp  faction.hpp
floor_manager/: floor_manager.hpp
fov/: CMakeLists.txt  fov.cpp  fov.hpp
game/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
game/lib/: CMakeLists.txt
game/lib/game/: CMakeLists.txt  game.cpp  game.hpp
game/loading/: CMakeLists.txt
game/loading/json_floor_manager/: CMakeLists.txt  json_floor_manager.cpp  json_floor_manager.hpp
game/ui/input_handler/: CMakeLists.txt  input_handler.cpp
geometry/: .test_main.cpp
geometry/line/: CMakeLists.txt
hero/: CMakeLists.txt  hero.cpp  hero.hpp
lib/: CMakeLists.txt
lib/action/: action.cpp
lib/action_types/: CMakeLists.txt
lib/action_types/desiccation_action/: CMakeLists.txt  desiccation_action.cpp
lib/action_types/spawn_action/: CMakeLists.txt  spawn_action.cpp  spawn_action.hpp
lib/api/: CMakeLists.txt
lib/attack/: attack.cpp  attack.hpp
lib/corpse/: corpse.cpp  corpse.hpp
lib/cost_priority_queue/: cost_priority_queue.hpp
lib/direction/: direction.hpp
lib/dynamic_library/: dynamic_library.cpp
lib/energy/: CMakeLists.txt  energy.hpp
lib/entity/: CMakeLists.txt  entity.cpp  entity.hpp
lib/essence/: CMakeLists.txt  essence.cpp  essence.hpp
lib/faction/: faction.cpp
lib/floor_manager/: CMakeLists.txt
lib/fov/: CMakeLists.txt  fov.cpp
lib/game/: game.cpp  game.hpp
lib/hero/: hero.cpp  hero.hpp
lib/matrix/: CMakeLists.txt
lib/mob/: CMakeLists.txt  mob.cpp  mob.hpp
lib/mob_state/: CMakeLists.txt  mob_state.cpp
lib/mob_state_types/: CMakeLists.txt
lib/move/: CMakeLists.txt  move.hpp
lib/move_types/: CMakeLists.txt
lib/move_types/summon_move/: CMakeLists.txt  summon_move.cpp  summon_move.hpp
lib/pathfinder/: pathfinder.cpp  pathfinder.hpp
lib/plugin_keeper/: plugin_keeper.cpp
lib/point/: point.hpp
lib/serializable/: serializable.hpp
lib/skill/: CMakeLists.txt  skill.hpp
lib/skill_set/: skill_set.cpp  skill_set.hpp
lib/stage/: stage.cpp  stage.hpp
lib/tile/: tile.cpp  tile.hpp
lib/undead/: undead.cpp  undead.hpp
library_manager/: CMakeLists.txt  library_manager.cpp  library_manager.hpp
loading/entity_builder/: CMakeLists.txt  entity_builder.cpp  entity_builder.hpp
loading/json_floor_manager/: json_floor_manager.cpp
loading/tile_builder/: CMakeLists.txt  tile_builder.cpp  tile_builder.hpp
matrix/: CMakeLists.txt  matrix.hpp
matrix/tests/: CMakeLists.txt  matrix_tests.cpp
mob/: CMakeLists.txt  mob.cpp  mob.hpp
mob/.mob_type/: mob_breed.hpp
mob_state/: mob_state.cpp  mob_state.hpp
mob_state_types/asleep_state/: CMakeLists.txt  asleep_state.cpp  asleep_state.hpp
mob_state_types/wander_state/: CMakeLists.txt  wander_state.hpp
mobs/: CMakeLists.txt
mobs/src/: CMakeLists.txt
mobs/src/golem/ethereal_golem/: CMakeLists.txt  ethereal_golem.cpp
mobs/src/golem/magma_golem/: CMakeLists.txt  magma_golem.cpp
mobs/src/golem/stone_golem/: CMakeLists.txt  stone_golem.cpp
move/: move.cpp  move.hpp
passability/: CMakeLists.txt  passability.hpp
pathfinder/: pathfinder.cpp  pathfinder.hpp
plugin_manager/: CMakeLists.txt  plugin_manager.cpp  plugin_manager.hpp
point/: CMakeLists.txt  point.hpp
skill/: action_skill.hpp  action_spell.hpp  skill.cpp  skill.hpp  spell.hpp  targeted_skill.hpp  targeted_spell.hpp  usable_skill.hpp
skill_set/: CMakeLists.txt  skill_set.cpp  skill_set.hpp
skill_types/: CMakeLists.txt
skill_types/action_skill/: action_skill.hpp
skill_types/curse_skill/: CMakeLists.txt  curse_skill.cpp
skill_types/desiccation_skill/: CMakeLists.txt  desiccation_skill.cpp
skill_types/usable_skill/: CMakeLists.txt  (+2 more)
stage/: CMakeLists.txt  stage.cpp  stage.hpp
tile/: CMakeLists.txt  tile.cpp  tile.hpp
tile_registry/: CMakeLists.txt  tile_registry.cpp  tile_registry.hpp
tile_type/: CMakeLists.txt  tile_type.cpp  tile_type.hpp
tile_types/: CMakeLists.txt
turn_result/: CMakeLists.txt  turn_result.hpp
ui/: CMakeLists.txt
undead/: CMakeLists.txt  undead.cpp  undead.hpp
undead_registry/: CMakeLists.txt  undead_registry.hpp
(+178 files in other folders)
