add_subdirectory(attack_action)

add_subdirectory(close_door_action)

add_subdirectory(entity_action)

add_subdirectory(heal_action)

add_subdirectory(line_action)

add_subdirectory(mana_action)

add_subdirectory(null_action)

add_subdirectory(open_door_action)

add_subdirectory(polymorph_action)

add_subdirectory(rest_action)

add_subdirectory(spawn_action)

add_subdirectory(walk_action)
