add_subdirectory(attack_action)

add_subdirectory(change_state_action)

add_subdirectory(close_door_action)

add_subdirectory(entity_action)

add_subdirectory(heal_action)

add_subdirectory(lava_burn_action)

add_subdirectory(line_action)

add_subdirectory(mana_action)

add_subdirectory(next_floor_action)

add_subdirectory(null_action)

add_subdirectory(open_door_action)

add_subdirectory(polymorph_action)

add_subdirectory(rest_action)

add_subdirectory(spawn_action)

add_subdirectory(walk_action)
